src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Note_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Action</fullName>
                </value>
                <value>
                    <fullName>Plan of Action</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Incoming Call</fullName>
                </value>
                <value>
                    <fullName>CE assist</fullName>
                </value>
                <value>
                    <fullName>Call to customer</fullName>
                </value>
                <value>
                    <fullName>Call from customer</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Technical Elevation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Add_Notes_Flag__c</fullName>
        <label>Add Notes Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_EmployeeId__c</fullName>
        <formula>CreatedBy.Employee_ID__c</formula>
        <label>Creater EmployeeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creator_Workgroup__c</fullName>
        <formula>TEXT( CreatedBy.Workgroup__c )</formula>
        <label>CSC_Report Creator Workgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Sync_Status__c</fullName>
        <description>此Notes同步到其他系统的状态，比如同步到 GSEM, GSEM 同步到 HPE 成功或者失败都会返回状态值到此字段。</description>
        <label>Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Hour__c</fullName>
        <label>Duration(Hour)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Minute__c</fullName>
        <label>Duration(Minute)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_type__c</fullName>
        <label>Note type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Log</fullName>
                </value>
                <value>
                    <fullName>Note Log</fullName>
                    <default>true</default>
                    <label>Note Log</label>
                </value>
                <value>
                    <fullName>Research Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presales_Sub_Type__c</fullName>
        <label>Presales Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Demonstration</fullName>
                </value>
                <value>
                    <fullName>Knowledge Transfer</fullName>
                </value>
                <value>
                    <fullName>Opportunity Assessment</fullName>
                </value>
                <value>
                    <fullName>Performance Benchmark</fullName>
                </value>
                <value>
                    <fullName>Post-Sales Support</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>RFP/RFI/RFQ</fullName>
                </value>
                <value>
                    <fullName>Solution Development</fullName>
                </value>
                <value>
                    <fullName>TCO/ROI Analysis</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>